@@ -4,9 +4,9 @@ gen_single_file
 lib/Directory/Organize.pm
 Makefile.PL
 MANIFEST			This list of files
+META.json
 META.yml
 mkdir_heute
 README
 t/Organize.t
 t/script-mkdir_heute.t
-META.json
