@@ -2,11 +2,9 @@
 abstract: 'Create and Organize Directories'
 author:
   - 'Mathias Weidner <mathias@weidner.in-bad-schmiedeberg.de>'
-build_requires: {}
 configure_requires:
-  Module::Build: 0.38
-dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110440'
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3603'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,11 +13,11 @@ name: Directory-Organize
 provides:
   Directory::Organize:
     file: lib/Directory/Organize.pm
-    version: v0.9.5
+    version: v0.9.6
 requires:
   Getopt::Long: 0
   Term::ReadKey: 0
   version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: v0.9.5
+version: v0.9.6
